fix flickering notelix-expanded-notes

--- a/chrome-extension/src/styles.less
+++ b/chrome-extension/src/styles.less
@@ -141,6 +141,7 @@
 }
 
 .notelix-expanded-notes {
+  pointer-events: none;
   position: fixed;
   left: 0;
   width: 100%;
